styling updates, goodnight

--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
          <article>
            <a href="img/animal%20friends.jpg" alt="Animal Friends">
               <!-- thumbnail -->
-              <img class="thumb" src="img/thumbnail-animal-friends.jpg" alt="">
+              <img class="thumb" src="img/thumbnail-animal-friends.jpg" alt="Animal Friends">
            </a>
             <a href="img/muralfinalsmallish.jpg" alt="Mural">
               <!-- thumbnail -->
-              <img class="thumb" src="img/thumbnail-mural.jpg" alt="">
+              <img class="thumb" src="img/thumbnail-mural.jpg" alt="Mural">
            </a>
             <a href="img/2.0.jpg" alt="Gender is a Social Construct">
               <!-- thumbnail -->
-              <img class="thumb" src="img/thumbnail-gender.jpg" alt="">
+              <img class="thumb" src="img/thumbnail-gender.jpg" alt="Gender is a Social Construct">
            </a>
-            <a href="img/2.0.jpg" alt="">
+            <a href="img/2.0.jpg" alt="Typographic Brain">
               <!-- thumbnail -->
-            <img class="thumb" src="img/thumbnail-brain.jpg" alt="">
+            <img class="thumb" src="img/thumbnail-brain.jpg" alt="Typographic Brain">
            </a>
-           <a href="img/2.0.jpg" alt="">
+           <a href="img/2.0.jpg" alt="Master's Painting">
               <!-- thumbnail -->
            <img class="thumb" src="img/thumbnail-painting.jpg" alt="">
            </a>
-           <a href="img/2.0.jpg" alt="">
+           <a href="img/2.0.jpg" alt="Illustration">
               <!-- thumbnail -->
-           <img class="thumb" src="img//thumbnail-idk.jpg" alt="">
+           <img class="thumb" src="img//thumbnail-idk.jpg" alt="Illustration">
            </a>
         </article>
        
