hover things happen

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header> -->
     
     <figure>
-            <p>Hello! I'm a VCD BFA student at Eastern Washington University. This is my portfolio.</p>
+            <p>Hello! I'm a VCD BFA student at Eastern Washington University. Click on the thumbnails to view the full image.</p>
           
          <article>
             <a href="img/muralfinalsmallish.jpg" alt="Mural created for a local library.">
