i can't figure out the rest of the hover thing

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- Container. Wrapper. -->
     <main>
     
-    <img id="picon" src="img/lil%20me.png">
-    <h1>Makenzie Ley's Portfolio</h1>
+    <a href="https://makeliley.github.io/p3-stand-alone-portfolio/"><img id="picon" src="img/lil%20me.png"></a>
+    <h1>Makenzie Ley</h1>
     
         <!-- <header>
             <img src="https://unsplash.it/700/300?image=3">
