better captions, styling for p

--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
             <p>Hello! I'm a VCD BFA student at Eastern Washington University. Click on the thumbnails to view the full image.</p>
           
          <article>
-            <a href="img/muralfinalsmallish.jpg" alt="Mural created for a local library.">
+            <a href="img/muralfinalsmallish.jpg" alt="Mural">
               <!-- thumbnail -->
-              <img class="thumb" src="img/thumbnail-mural.jpg" alt="Mural">
+              <img class="thumb" src="img/thumbnail-mural.jpg" alt="Mural  created for a local library.">
            </a>
             <a href="img/2.0.jpg" alt="Gender is a Social Construct">
               <!-- thumbnail -->
-              <img class="thumb" src="img/thumbnail-gender.jpg" alt="Gender is a Social Construct">
+              <img class="thumb" src="img/thumbnail-gender.jpg" alt="Gender is a Social Construct poster created for VCD 1.">
            </a>
             <a href="img/brain.jpg" alt="Typographic Brain">
               <!-- thumbnail -->
-            <img class="thumb" src="img/thumbnail-brain.jpg" alt="Typographic Brain">
+            <img class="thumb" src="img/thumbnail-brain.jpg" alt="Typographic Brain created for Typography class.">
            </a>
-           <a href="img/together.png" alt="Master's Painting">
+           <a href="img/together.png" alt="Trump Stickers">
               <!-- thumbnail -->
-           <img class="thumb" src="img/thumbnail-trumps.png" alt="">
+           <img class="thumb" src="img/thumbnail-trumps.png" alt="Trump Stickers drawn digitally and hidden around EWU campus and Spokane.">
            </a>
            <a href="img/newspaper.png" alt="Modern Rebel Newspaper">
               <!-- thumbnail -->
-           <img class="thumb" src="img/thumbnail-news.png" alt="Newspaper created for Typography class.">
+           <img class="thumb" src="img/thumbnail-news.png" alt="A riot grrrl newspaper created with InDesign for Typography class.">
            </a>
             <a href="img/animal%20friends.jpg" alt="Animal Friends">
               <!-- thumbnail -->
-            <img class="thumb" src="img/thumbnail-animal-friends.jpg" alt="Animal Friends">
+            <img class="thumb" src="img/thumbnail-animal-friends.jpg" alt="Animal Friends drawn on paper and edited digitally.">
            </a>
         </article>
        
